# lokey

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  doctest_setup  doctest_setup_with_allocator  flake.nix  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml  rust.yml
.zed/: settings.json
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/pages/concepts/: components.md  context.md  devices.md  external-channel.md  external-transports.md  internal-channel.md  internal-transports.md  mcus.md  state.md  storage.md
docs/pages/guides/: adding-support-for-a-device.md  adding-support-for-a-mcu.md  adding-support-for-an-mcu.md  flashing-firmware.md  implementing-a-ble-service.md  implementing-a-usb-class.md  writing-a-custom-component.md
docs/pages/introduction/: api-documentation.md  getting-started.md  supported-hardware.md  troubleshooting.md  what-is-lokey.md
docs/pages/keyboard/: actions.md  comparison-with-alternatives.md  debouncing.md  introduction.md  key-overrides.md  layout.md  scanning.md
docs/pages/mouse/: introduction.md
examples/keyboard-nrf52840/: Cargo.toml  memory.x
examples/keyboard-nrf52840/.cargo/: config.toml
examples/keyboard-nrf52840/src/: lib.rs
examples/keyboard-rp2040/: Cargo.toml
examples/keyboard-rp2040/.cargo/: config.toml
examples/keyboard-rp2040/src/: main.rs
examples/keyboard_nrf52840/: Cargo.toml  memory.x
examples/keyboard_nrf52840/src/: lib.rs  main.rs
examples/keyboard_rp2040/: Cargo.toml
examples/keyboard_rp2040/src/: main.rs
examples/lokey-blink/: Cargo.toml
examples/lokey-blink/src/: lib.rs
examples/lokey_blink/: Cargo.toml
lokey/: Cargo.toml
lokey-ble/: Cargo.toml
lokey-ble-macros/: Cargo.toml
lokey-ble/src/: external.rs
lokey-keyboard/: Cargo.toml
lokey-keyboard-macros/: Cargo.toml
lokey-keyboard/src/: ble.rs  debounce.rs  direct_pins.rs  matrix.rs  switch.rs
lokey-keyboard/src/switch/: output.rs
lokey-layer/: Cargo.toml
lokey-led-array/: Cargo.toml
lokey-led-array/src/: pwm.rs
lokey-led-array/src/nrf52840/: pwm.rs
lokey-macros/: Cargo.toml
lokey-macros/src/: external_message.rs  lib.rs  state.rs
lokey-midi/: Cargo.toml
lokey-midi/src/: action.rs  ble.rs  lib.rs  usb.rs
lokey-mouse/: Cargo.toml
lokey-nrf/: Cargo.toml
lokey-rp/: Cargo.toml
lokey-rp/src/: lib.rs
lokey-usb/: Cargo.toml
lokey-usb-ble/: Cargo.toml
lokey-usb-ble/src/: external.rs
lokey-usb-macros/: Cargo.toml
lokey/src/: blink.rs  doctest_setup  doctest_setup_with_allocator  external.rs  internal.rs  key.rs  keyboard.rs  layer.rs  lib.rs  mcu.rs  state.rs  status_led_array.rs  storage.rs  util.rs
lokey/src/internal/: ble.rs  channel.rs  empty.rs
lokey/src/key/: action.rs  debounce.rs  direct_pins.rs  matrix.rs
lokey/src/keyboard/: action.rs  ble_transport.rs  direct_pins.rs  key.rs  matrix.rs  usb_transport.rs
lokey/src/mcu/: nrf52840.rs  rp2040.rs  storage.rs
lokey/src/mcu/nrf52840/: ble.rs  pwm.rs  usb.rs
lokey/src/mcu/nrf52840/ble/: external.rs  internal.rs
lokey/src/mcu/rp2040/: usb.rs
lokey/src/storage/: default.rs  empty.rs
lokey/src/util/: channel.rs  pubsub.rs
lokey_ble/: Cargo.toml
lokey_ble/src/: external.rs  internal.rs  lib.rs
lokey_ble_macros/: Cargo.toml
lokey_ble_macros/src/: tx_message.rs
lokey_common/: Cargo.toml
lokey_common/src/: blink.rs  layer.rs  lib.rs  status_led_array.rs
lokey_keyboard/: Cargo.toml
lokey_keyboard/src/: action.rs  ble.rs  ble_transport.rs  debounce.rs  direct_pins.rs  key.rs  key_override.rs  lib.rs  matrix.rs  switch.rs  usb.rs  usb_transport.rs
lokey_keyboard/src/switch/: input.rs  mock.rs
lokey_keyboard_macros/: Cargo.toml
lokey_keyboard_macros/src/: layout.rs  lib.rs
lokey_layer/: Cargo.toml
lokey_layer/src/: layer_manager_inner.rs  lib.rs
lokey_led_array/: Cargo.toml
lokey_led_array/src/: lib.rs  nrf52840.rs  pwm.rs
lokey_led_array/src/nrf52840/: pwm.rs
lokey_macros/: Cargo.toml
lokey_macros/src/: device.rs  layout.rs  lib.rs  state.rs
lokey_midi/: Cargo.toml
lokey_mouse/: Cargo.toml
lokey_mouse/src/: action.rs  ble.rs  lib.rs  usb.rs
lokey_nrf/: Cargo.toml
lokey_nrf/src/: lib.rs  nrf52840.rs
lokey_rp/: Cargo.toml
lokey_rp/src/: lib.rs  rp2040.rs
lokey_usb/: Cargo.toml
lokey_usb/src/: external.rs  lib.rs
lokey_usb_ble/: Cargo.toml
lokey_usb_ble/src/: external.rs  lib.rs
lokey_usb_macros/: Cargo.toml
lokey_usb_macros/src/: lib.rs  tx_message.rs
