[workspace]
resolver = "2"
members = [
    "lokey",
    "lokey-macros",
    "lokey-usb",
    "lokey-usb-macros",
    "lokey-ble",
    "lokey-ble-macros",
    "lokey-usb-ble",
    "lokey-nrf",
    "lokey-rp",
    "lokey-keyboard",
    "lokey-keyboard-macros",
    "lokey-mouse",
    "lokey-midi",
    "lokey-layer",
    "lokey-led-array",
]
exclude = [
    "examples/lokey-blink",
    "examples/keyboard-nrf52840",
    "examples/keyboard-rp2040"
]

[profile.release]
debug = 2
