[package]
name = "lokey-keyboard"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Keyboard component for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["keyboard", "firmware"]

[features]
default = ["macros"]

## Enables macros.
macros = [
  "dep:lokey-keyboard-macros",
]

## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "embassy-usb/defmt",
  "enumset/defmt",
  "lokey/defmt",
  "lokey-ble?/defmt",
  "lokey-layer/defmt",
  "lokey-usb?/defmt",
  "lokey-usb-ble?/defmt",
  "trouble-host?/defmt",
  "usbd-hid?/defmt",
]

## Enables the external message service for the USB transport.
usb = ["dep:embassy-usb", "dep:usbd-hid", "dep:lokey-usb"]

## Enables the external message service for the BLE (Bluetooth Low Energy) transport.
ble = ["dep:trouble-host", "dep:usbd-hid", "dep:lokey-ble"]

## Enables actions to switch between USB and BLE output when using the external transport from [`lokey-usb-ble`].
usb-ble = ["dep:lokey-usb-ble"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
defmt = { version = "1.0.1", optional = true }
derive_more = { version = "2.0.1", default-features = false, features = ["error", "display"] }
document-features = "0.2.11"
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = { version = "0.6.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
enumset = "1.1.10"
futures-util = { version = "0.3.32", default-features = false, features = ["async-await-macro"] }
generic-array = "1.3.1"
lokey = { path = "../lokey", features = ["max-internal-message-size-8"] }
lokey-ble = { path = "../lokey-ble", optional = true }
lokey-keyboard-macros = { path = "../lokey-keyboard-macros", optional = true }
lokey-layer = { path = "../lokey-layer" }
lokey-usb = { path = "../lokey-usb", optional = true }
lokey-usb-ble = { path = "../lokey-usb-ble", optional = true }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
seq-macro = "0.3.6"
static_cell = "2.1.0"
trouble-host = { version = "0.6.0", features = ["security"], optional = true }
typenum = "1.19.0"
usbd-hid = { version = "0.10.0", optional = true }

[dev-dependencies]
noop-waker = "0.1.0"

[package.metadata.docs.rs]
features = ["macros", "defmt", "usb", "ble", "usb-ble"]
