[package]
name = "lokey-usb-ble"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Combined USB and BLE transport support for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "lokey/defmt",
  "lokey-ble/defmt",
  "lokey-usb/defmt",
  "trouble-host/defmt",
]


[dependencies]
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
generic-array = "1.3.4"
lokey = { path = "../lokey", version = "0.0.1" }
lokey-ble = { path = "../lokey-ble" }
lokey-usb = { path = "../lokey-usb" }
trouble-host = { version = "0.6.0", features = ["security"] }
typenum = "1.19.0"

[package.metadata.docs.rs]
features = ["defmt"]
