[package]
name = "lokey"
version = "0.0.1"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "A firmware framework for input devices"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["keyboard", "firmware"]

[features]
default = ["macros"]

## Enables macros.
macros = [
  "dep:lokey_macros",
]

## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-nrf?/defmt",
  "embassy-rp?/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "embassy-usb/defmt",
  "embedded-hal/defmt-03",
  "embedded-hal-async/defmt-03",
  "trouble-host?/defmt",
  "nrf-sdc?/defmt",
  "nrf-mpsl?/defmt",
  "sequential-storage/defmt-03",
  "usbd-hid?/defmt",
]

#! #### Transports

## Enables the external USB transport.
external-usb = [
  "dep:embassy-usb",
]

## Enables the external Bluetooth Low Energy (BLE) transport.
external-ble = [
  "dep:trouble-host",
  "dep:rand_chacha",
]

## Enables the internal Bluetooth Low Energy (BLE) transport.
internal-ble = [
  "dep:trouble-host",
  "dep:rand_chacha",
]

#! #### Microcontrollers

## Enables support for the nRF52840 microcontroller.
nrf52840 = [
  "dep:embassy-nrf",
  "embassy-nrf/nrf52840",
  "dep:nrf-mpsl",
  "dep:nrf-sdc",
  "nrf-mpsl?/nrf52840",
  "nrf-sdc?/nrf52840",
]

## Enables support for the RP2040 microcontroller.
rp2040 = [
  "dep:embassy-rp",
  "embassy-rp/rp2040",
]

max-internal-message-size-8 = []
max-internal-message-size-16 = []
max-internal-message-size-32 = []
max-internal-message-size-64 = []
max-internal-message-size-128 = []
max-internal-message-size-256 = []
max-internal-message-size-512 = []
max-internal-message-size-1024 = []

max-num-internal-receivers-8 = []
max-num-internal-receivers-16 = []
max-num-internal-receivers-24 = []
max-num-internal-receivers-32 = []
max-num-internal-receivers-40 = []
max-num-internal-receivers-48 = []
max-num-internal-receivers-56 = []
max-num-internal-receivers-64 = []


[dependencies]
bitcode = { git = "https://github.com/nn1ks/bitcode", branch = "fix-arc-impl", default-features = false, features = ["derive"] }
defmt = { version = "1.0.1", features = ["alloc"], optional = true }
document-features = "0.2.11"
dyn-clone = "1.0.20"
embassy-futures = "0.1.1"
embassy-nrf = { version = "0.8.0", features = ["gpiote", "time-driver-rtc1", "nfc-pins-as-gpio"], optional = true }
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "time-driver"], optional = true }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = { version = "0.5.1", features = ["usbd-hid"], optional = true }
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-storage-async = "0.4.1"
futures-util = { version = "0.3.30", default-features = false, features = ["portable-atomic"] }
generic-array = "1.3.4"
arrayvec = { version = "0.7.6", default-features = false }
lokey_macros = { path = "../lokey_macros", version = "0.0.1", optional = true }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c3653af73b511133c2f8231f33eb0696f4", features = ["critical-section-impl"], optional = true }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c3653af73b511133c2f8231f33eb0696f4", features = ["central", "peripheral"], optional = true }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
portable-atomic-util = { version = "0.2.0", features = ["alloc"] }
rand_chacha = { version = "0.3.1", default-features = false, optional = true }
seq-macro = "0.3.6"
sequential-storage = "5.0.1"
static_cell = "2.1.0"
trouble-host = { version = "0.5", features = ["security"], optional = true }
typenum = "1.17.0"
typeid = "1.0.3"
usbd-hid = { version = "0.8.2", optional = true }

[dev-dependencies]
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }

[package.metadata.docs.rs]
features = ["macros", "defmt", "external-usb", "external-ble", "internal-ble"]
