[package]
name = "lokey"
version = "0.0.1"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "A firmware framework for input devices"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["keyboard", "firmware"]

[features]
default = ["macros"]

## Enables macros.
macros = [
  "dep:lokey_macros",
]

## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-rp?/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "embassy-usb/defmt",
  "embedded-hal/defmt-03",
  "embedded-hal-async/defmt-03",
  "trouble-host?/defmt",
  "sequential-storage/defmt-03",
  "usbd-hid?/defmt",
]

#! #### Transports

## Enables the external USB transport.
external-usb = [
  "dep:embassy-usb",
]

## Enables the external Bluetooth Low Energy (BLE) transport.
external-ble = ["dep:trouble-host"]

## Enables the internal Bluetooth Low Energy (BLE) transport.
internal-ble = ["dep:trouble-host"]


max-internal-message-size-8 = []
max-internal-message-size-16 = []
max-internal-message-size-32 = []
max-internal-message-size-64 = []
max-internal-message-size-128 = []
max-internal-message-size-256 = []
max-internal-message-size-512 = []
max-internal-message-size-1024 = []

internal-receiver-slots-8 = []
internal-receiver-slots-16 = []
internal-receiver-slots-24 = []
internal-receiver-slots-32 = []
internal-receiver-slots-40 = []
internal-receiver-slots-48 = []
internal-receiver-slots-56 = []
internal-receiver-slots-64 = []

external-receiver-slots-8 = []
external-receiver-slots-16 = []
external-receiver-slots-24 = []
external-receiver-slots-32 = []
external-receiver-slots-40 = []
external-receiver-slots-48 = []
external-receiver-slots-56 = []
external-receiver-slots-64 = []

external-observer-slots-8 = []
external-observer-slots-16 = []
external-observer-slots-24 = []
external-observer-slots-32 = []
external-observer-slots-40 = []
external-observer-slots-48 = []
external-observer-slots-56 = []
external-observer-slots-64 = []


[dependencies]
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
dyn-clone = "1.0.20"
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = { version = "0.5.1", features = ["usbd-hid"], optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-storage-async = "0.4.1"
futures-util = { version = "0.3.30", default-features = false, features = ["portable-atomic"] }
generic-array = "1.3.4"
arrayvec = { version = "0.7.6", default-features = false }
lokey_macros = { path = "../lokey_macros", version = "0.0.1", optional = true }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
seq-macro = "0.3.6"
sequential-storage = "5.0.1"
static_cell = "2.1.0"
trouble-host = { version = "0.5", features = ["security"], optional = true }
typenum = "1.17.0"
typeid = "1.0.3"
usbd-hid = { version = "0.8.2", optional = true }
derive_more = { version = "2.0.1", default-features = false, features = ["display", "error", "from"] }

[dev-dependencies]
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }

[package.metadata.docs.rs]
features = ["macros", "defmt", "external-usb", "external-ble", "internal-ble"]
