[package]
name = "lokey_ble"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "BLE (Bluetooth Low Energy) transport support for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "lokey/defmt",
  "trouble-host/defmt",
]


[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
generic-array = "1.3.4"
lokey = { path = "../lokey", version = "0.0.1" }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
static_cell = "2.1.0"
trouble-host = { version = "0.6.0", features = ["security"] }
typenum = "1.17.0"

[package.metadata.docs.rs]
features = ["defmt"]
