[package]
name = "lokey_keyboard"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Keyboard component for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["keyboard", "firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "lokey/defmt",
  "lokey_common/defmt",
  "embassy-executor/defmt",
  "embassy-futures/defmt",
]

## Enables the external USB transport for key messages.
external-usb = ["dep:usbd-hid", "lokey/external-usb", "lokey/external-usb-hid"]

## Enables the external Bluetooth Low Energy (BLE) transport for key messages.
external-ble = ["dep:trouble-host", "dep:usbd-hid", "dep:ssmarshal", "lokey/external-ble"]

[dependencies]
defmt = { version = "0.3.5", features = ["alloc"], optional = true }
document-features = "0.2.11"
embassy-executor = { version = "0.7.0", features = ["executor-thread", "executor-interrupt", "nightly"] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
lokey = { path = "../lokey" }
lokey_common = { path = "../lokey_common", features = ["layer"] }
lokey_keyboard_macros = { path = "../lokey_keyboard_macros" }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
ssmarshal = { version = "1.0.0", default-features = false, optional = true }
static_cell = "2.1.0"
switch-hal = { git = "https://github.com/daniel-dbg-ginsburg/switch-hal", branch = "hal-update", features = ["async"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "3d77c0b", features = ["security"], optional = true }
usbd-hid = { version = "0.8.2", optional = true }
