[package]
name = "lokey_keyboard"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Keyboard component for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["keyboard", "firmware"]

[features]
default = ["macros"]

## Enables macros.
macros = [
  "dep:lokey_keyboard_macros",
]

## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "lokey/defmt",
  "lokey_common/defmt",
  "embassy-executor/defmt",
  "embassy-futures/defmt",
]

## Enables the external USB transport for key messages.
external-usb = ["dep:embassy-usb", "dep:usbd-hid", "dep:ssmarshal", "lokey/external-usb"]

## Enables the external Bluetooth Low Energy (BLE) transport for key messages.
external-ble = ["dep:trouble-host", "dep:usbd-hid", "dep:ssmarshal", "lokey/external-ble"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
defmt = { version = "1.0.1", features = ["alloc"], optional = true }
derive_more = { version = "2.0.1", default-features = false, features = ["error", "display"] }
document-features = "0.2.11"
embassy-executor = { version = "0.9.1", features = ["executor-thread", "executor-interrupt", "nightly"] }
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = { version = "0.5.1", optional = true }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
generic-array = "1.3.1"
lokey = { path = "../lokey" }
lokey_common = { path = "../lokey_common", features = ["layer"] }
lokey_keyboard_macros = { path = "../lokey_keyboard_macros", optional = true }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
seq-macro = "0.3.6"
ssmarshal = { version = "1.0.0", default-features = false, optional = true }
static_cell = "2.1.0"
switch-hal = { git = "https://github.com/daniel-dbg-ginsburg/switch-hal", branch = "hal-update", features = ["async"] }
trouble-host = { version = "0.5", features = ["security"], optional = true }
typenum = "1.19.0"
usbd-hid = { version = "0.8.2", optional = true }

[dev-dependencies]
embedded-alloc = "0.7.0"

[package.metadata.docs.rs]
features = ["macros", "defmt", "external-usb", "external-ble"]
