[package]
name = "lokey_layer"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Layer management for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
    "dep:defmt",
    "embassy-sync/defmt",
    "lokey/defmt",
]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-sync = "0.7.2"
lokey = { path = "../lokey" }

[package.metadata.docs.rs]
features = ["defmt"]
