[package]
name = "lokey_led_array"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "LED array component for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
    "dep:defmt",
    "lokey/defmt",
]

## Enables hooks for the external Bluetooth Low Energy (BLE) transport.
external-ble = ["lokey/external-ble"]

## Enables support for PWM of the nRF52840 microcontroller.
nrf52840 = [
  "dep:embassy-nrf",
  "embassy-nrf/nrf52840",
  "dep:portable-atomic-util",
]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-futures = "0.1.1"
embassy-nrf = { version = "0.8.0", optional = true }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await-macro", "portable-atomic"] }
generic-array = "1.3.4"
lokey = { path = "../lokey", version = "0.0.1" }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }
portable-atomic-util = { version = "0.2.0", optional = true }
seq-macro = "0.3.6"
typenum = "1.17.0"
