[package]
name = "lokey_macros"
version = "0.0.1"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "An extensible keyboard firmware (macro crate)"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
