[package]
name = "lokey_midi"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "MIDI component for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["midi", "firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-sync/defmt",
  "embassy-time?/defmt",
  "embassy-usb/defmt",
  "lokey/defmt",
  "lokey_ble?/defmt",
  "lokey_usb?/defmt",
  "trouble-host?/defmt",
]

## Implements action types that can be used in a keyboard layout from [`lokey_keyboard`].
keyboard-actions = ["dep:lokey_keyboard"]

## Enables the external message service for the USB transport.
usb = [
  "dep:embassy-usb",
  "dep:lokey_usb",
]

## Enables the external message service for the BLE (Bluetooth Low Energy) transport.
ble = [
  "dep:generic-array",
  "dep:embassy-time",
  "dep:lokey_ble",
  "dep:static_cell",
  "dep:trouble-host",
  "dep:typenum",
]

[dependencies]
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", optional = true }
embassy-usb = { version = "0.6.0", default-features = false, optional = true }
generic-array = { version = "1.3.1", optional = true }
lokey = { path = "../lokey", features = ["max-internal-message-size-8"] }
lokey_ble = { path = "../lokey_ble", optional = true }
lokey_keyboard = { path = "../lokey_keyboard", optional = true }
lokey_usb = { path = "../lokey_usb", optional = true }
static_cell = { version = "2.1.0", optional = true }
trouble-host = { version = "0.6.0", features = ["security"], optional = true }
typenum = { version = "1.19.0", optional = true }
wmidi = { version = "4.0.10", default-features = false }

[package.metadata.docs.rs]
features = ["defmt", "keyboard-actions", "usb", "ble"]
