[package]
name = "lokey_mouse"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Mouse component for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["mouse", "firmware"]

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-sync/defmt",
  "embassy-time?/defmt",
  "embassy-usb/defmt",
  "enumset/defmt",
  "lokey/defmt",
  "lokey_ble?/defmt",
  "lokey_usb?/defmt",
  "trouble-host?/defmt",
  "usbd-hid?/defmt",
]

## Implements action types that can be used in a keyboard layout from [`lokey_keyboard`].
keyboard-actions = ["dep:lokey_keyboard", "dep:embassy-time", "dep:portable-atomic"]

## Enables the external message service for the USB transport.
usb = [
  "dep:embassy-usb",
  "dep:lokey_usb",
  "dep:ssmarshal",
  "dep:usbd-hid",
]

## Enables the external message service for the BLE (Bluetooth Low Energy) transport.
ble = [
  "dep:generic-array",
  "dep:lokey_ble",
  "dep:ssmarshal",
  "dep:static_cell",
  "dep:trouble-host",
  "dep:typenum",
  "dep:usbd-hid",
]

[dependencies]
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", optional = true }
embassy-usb = { version = "0.5.1", optional = true }
enumset = "1.1.10"
generic-array = { version = "1.3.1", optional = true }
lokey = { path = "../lokey", features = ["max-internal-message-size-8"] }
lokey_ble = { path = "../lokey_ble", optional = true }
lokey_keyboard = { path = "../lokey_keyboard", optional = true }
lokey_usb = { path = "../lokey_usb", optional = true }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"], optional = true }
ssmarshal = { version = "1.0.0", default-features = false, optional = true }
static_cell = { version = "2.1.0", optional = true }
trouble-host = { version = "0.6.0", features = ["security"], optional = true }
typenum = { version = "1.19.0", optional = true }
usbd-hid = { version = "0.9.0", optional = true }

[package.metadata.docs.rs]
features = ["defmt", "keyboard-actions", "usb", "ble"]
