cargo-features = ["per-package-target"]

[package]
name = "lokey_rp"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "Raspberry Pi RP2040 and RP235x microcontroller support for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["firmware"]

default-target = "thumbv6m-none-eabi"

[features]
## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-rp/defmt",
  "embassy-usb?/defmt",
  "lokey/defmt",
  "lokey_usb?/defmt",
]

#! #### Transports

## Enables support for USB.
usb = [
  "dep:embassy-usb",
  "dep:lokey_usb",
]

#! #### Microcontrollers

## Enables support for the RP2040 microcontroller.
rp2040 = [
  "embassy-rp/rp2040",
]


[dependencies]
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "time-driver"] }
embassy-usb = { version = "0.5.1", features = ["usbd-hid"], optional = true }
lokey = { path = "../lokey" }
lokey_usb = { path = "../lokey_usb", optional = true }
typenum = "1.17.0"

[package.metadata.docs.rs]
features = ["defmt", "usb", "rp2040"]
