[package]
name = "lokey_usb"
version = "0.0.0"
edition = "2024"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
repository = "https://github.com/nn1ks/lokey"
license = "Apache-2.0 OR MIT"
description = "USB transport support for the lokey framework"
readme = "../README.md"
categories = ["embedded", "no-std"]
keywords = ["firmware"]

[features]
default = ["macros"]

## Enables macros.
macros = ["dep:lokey_usb_macros"]

## Enables logging via [defmt](https://docs.rs/defmt/latest/defmt).
defmt = [
  "dep:defmt",
  "embassy-futures/defmt",
  "embassy-sync/defmt",
  "embassy-usb/defmt",
  "lokey/defmt",
]


[dependencies]
defmt = { version = "1.0.1", optional = true }
document-features = "0.2.11"
embassy-futures = "0.1.1"
embassy-sync = "0.7.2"
embassy-usb = { version = "0.5.1", features = ["usbd-hid"] }
lokey = { path = "../lokey", version = "0.0.1" }
lokey_usb_macros = { path = "../lokey_usb_macros", optional = true }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "require-cas"] }

[package.metadata.docs.rs]
features = ["defmt"]
